# complex_prediction

./: CMakeLists.txt  test
.cache/clangd/index/: bio_information.cpp.73F3B281AF6D4071.idx  bio_information.h.BDCF19FB141847DB.idx  config.h.5C033482A7A0CE84.idx  dag.cpp.2AF712ACD600A667.idx  dag.h.A5E1A808F0832CA8.idx  gene_express.cpp.D417CDC23CAB0123.idx  gene_express.h.2CC892B747FD69E3.idx  graph.cpp.A70A6AD1D372C419.idx  graph.h.D023592DA0739CD9.idx  test.cpp.885EC0287777D456.idx  ungraph.cpp.1DD43A30CB9D44AD.idx  ungraph.h.D1E126CE2CFD0178.idx
evaluation/: evaluation.sh  readme.md  resdd.txt
include/: bio_information.h  bops.h  config.h  dag.h  gene_express.h  graph.h  tools.h  ungraph.h
result/CMC/: cmc
result/SPICi/: spici
src/: a.out  cc.cpp  collins_weight.txt  core.txt  core_muti.txt  core_muti2.txt  new_delete.cpp  random_core.cpp  randomwalk.cpp  randomwalk2.cpp  test  test.cpp
src/lib/: bio_information.cpp  dag.cpp  gene_express.cpp  graph.cpp  ungraph.cpp
temp/: biogrid0  biogrid1  biogrid10  biogrid11  biogrid12  biogrid13  biogrid14  biogrid15  biogrid16  biogrid17  biogrid18  biogrid19  biogrid2  biogrid3  biogrid4  biogrid5  biogrid6  biogrid7  biogrid8  biogrid9  collins0  collins1  collins10  collins11  collins12  collins13  collins14  collins15  collins16  collins17  collins18  collins19  collins2  collins3  collins4  collins5  collins6  collins7  collins8  collins9  (+40 more)
temp_ppi/: biogrid0  biogrid1  biogrid10  biogrid11  biogrid12  biogrid13  biogrid14  biogrid15  biogrid16  biogrid17  biogrid18  biogrid19  biogrid2  biogrid3  biogrid4  biogrid5  biogrid6  biogrid7  biogrid8  biogrid9  collins0  collins1  collins10  collins11  collins12  collins13  collins14  collins15  collins16  collins17  collins18  collins19  collins2  collins3  collins4  collins5  collins6  collins7  collins8  collins9  (+60 more)
